fix: arabic navigation bar (#6006)
* fix: arabic navigation bar

* fix: notifications dropdown ARIA accessibility

* fix: notification banner issues only, remove unrelated styling changes

* intentation changes

* changes of coderabbitai suggestion and resolved git conflicts

* suggested coderabbitai[bot] changes

* Removed trailing whitespace on lines 7 and 12 to improve code cleanliness and follow linting guidelines.

* Restore correct notification dropdown markup and remove trailing whitespace

* hound bot suggestions done

* fix: simplify RTL notification dropdown without !important

* Remove unnecessary blank lines in navbar.scss

---------

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -667,6 +667,10 @@ display: block;
   top: 90%;
 }
 
+[dir="rtl"] .dropdown-menu.dropdown-menu-end {
+  left: 0;
+  right: auto;
+}
 //breakpoints
 // collapse navbar earlier between 1080px and 992px
 @media (max-width: 1080px) and (min-width: 992px) {
